--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,122 +1,20 @@
-name: Build Modules
-on:
-  workflow_call:
-    secrets:
-      TELEGRAM_TO:
-        required: true
-      TELEGRAM_TOKEN:
-        required: true
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-java@v3
+      - run: |
+          git clone "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY" .
+          ./build-module.sh
+      - id: get_output_name
+        run: echo ::set-output name=OUTPUT::$(cat build-module.sh | sed -n 's/.*OUTPUT="\(.*\)".*/\1/p')
+        shell: bash
+      - name: Upload release
+        uses: svenstaro/upload-release-action@2.3.0
         with:
-          distribution: "zulu"
-          java-version: "17"
-
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          submodules: true
-
-      - name: Get next version code
-        id: next_ver_code
-        run: |
-          # TAG=$(git tag --sort=creatordate | tail -1)
-          # fetch it from github
-          TAG=$(wget https://api.github.com/repos/$GITHUB_REPOSITORY/releases/latest -O- | tr -d ' ' | sed -n 's/.*"tag_name":"\(.*\)".*/\1/p')
-          if [ -z "$TAG" ]; then TAG=0; fi
-          echo ::set-output name=NEXT_VER_CODE::$((TAG + 1))
-
-      - name: Build Modules/APKs
-        run: ./build.sh build
-        env:
-          GITHUB_REPOSITORY: $GITHUB_REPOSITORY
-          NEXT_VER_CODE: ${{ steps.next_ver_code.outputs.NEXT_VER_CODE }}
-
-      - name: Set Build Log
-        id: get_output
-        run: |
-          echo " " >> build.log
-          echo "Use [microG APK](https://www.apkmirror.com/apk/team-vanced/microg-youtube-vanced/) for YouTube and Music" >> build.log
-          BUILD_LOG=$(cat build.log)
-          BUILD_LOG="${BUILD_LOG//'%'/'%25'}"
-          BUILD_LOG="${BUILD_LOG//$'\n'/'%0A'}"
-          BUILD_LOG="${BUILD_LOG//$'\r'/'%0D'}"
-
-          echo ::set-output name=BUILD_LOG::$BUILD_LOG
-
-          cd build
-          yt_op=$(find . -maxdepth 1 -name "youtube-revanced-magisk-*.zip" -printf '%P')
-          echo ::set-output name=YT_OUTPUT::$yt_op
-          echo ::set-output name=RELEASE_NAME::"$(date +'v%d-%m-%Y')"
-          echo ::set-output name=MUSIC_OUTPUT_ARM64::$(find . -maxdepth 1 -name "music-revanced-magisk-*-arm64-v8a.zip" -printf '%P')
-          echo ::set-output name=MUSIC_OUTPUT_ARM::$(find . -maxdepth 1 -name "music-revanced-magisk-*-arm-v7a.zip" -printf '%P')
-
-      - name: Upload modules to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          body: ${{ steps.get_output.outputs.BUILD_LOG }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./build/*
-          release_name: ${{ steps.get_output.outputs.RELEASE_NAME }}
-          tag: ${{ steps.next_ver_code.outputs.NEXT_VER_CODE }}
-          file_glob: true
-          overwrite: false
-
-      - name: Switch to update branch
-        run: git checkout -f update || git switch --discard-changes --orphan update
-
-      - name: Update changelog and Magisk update jsons
-        id: update_config
-        run: |
-          cp -f build.log latest_build.md
-          CHANGELOG_URL="https://raw.githubusercontent.com/$GITHUB_REPOSITORY/update/latest_build.md"
-          get_update_json() {
-            echo "{
-            \"version\": \"v$1\",
-            \"versionCode\": $2,
-            \"zipUrl\": \"$3\",
-            \"changelog\": \"$4\"
-          }"
-          }
-          if [ -n "${{ steps.get_output.outputs.YT_OUTPUT }}" ]; then
-            YT_VER=$(echo "${{ steps.get_output.outputs.BUILD_LOG }}" | sed -n 's/.*YouTube version: \(.*\)/\1/p')
-            YT_DLURL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/releases/download/${{ steps.next_ver_code.outputs.NEXT_VER_CODE}}/${{ steps.get_output.outputs.YT_OUTPUT }}"
-            UPDATE_YT_JSON=$(get_update_json "$YT_VER" "${{ steps.next_ver_code.outputs.NEXT_VER_CODE}}" "$YT_DLURL" "$CHANGELOG_URL")
-            echo "$UPDATE_YT_JSON" >yt-update.json
-          fi
-
-          if [ -n "${{ steps.get_output.outputs.MUSIC_OUTPUT_ARM64 }}" ]; then
-            MUSIC_VER=$(echo "${{ steps.get_output.outputs.BUILD_LOG }}" | sed -n 's/.*Music (arm64-v8a) version: \(.*\)/\1/p')
-            MUSIC_ARM64_DLURL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/releases/download/${{ steps.next_ver_code.outputs.NEXT_VER_CODE}}/${{ steps.get_output.outputs.MUSIC_OUTPUT_ARM64 }}"
-            UPDATE_MUSIC_ARM64_JSON=$(get_update_json "$MUSIC_VER" "${{ steps.next_ver_code.outputs.NEXT_VER_CODE }}" "$MUSIC_ARM64_DLURL" "$CHANGELOG_URL")
-            echo "$UPDATE_MUSIC_ARM64_JSON" >music-update-arm64-v8a.json
-          fi
-
-          if [ -n "${{ steps.get_output.outputs.MUSIC_OUTPUT_ARM }}" ]; then
-            MUSIC_VER=$(echo "${{ steps.get_output.outputs.BUILD_LOG }}" | sed -n 's/.*Music (arm-v7a) version: \(.*\)/\1/p')
-            MUSIC_ARM_DLURL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/releases/download/${{ steps.next_ver_code.outputs.NEXT_VER_CODE}}/${{ steps.get_output.outputs.MUSIC_OUTPUT_ARM }}"
-            UPDATE_MUSIC_ARM_JSON=$(get_update_json "$MUSIC_VER" "${{ steps.next_ver_code.outputs.NEXT_VER_CODE }}" "$MUSIC_ARM_DLURL" "$CHANGELOG_URL")
-            echo "$UPDATE_MUSIC_ARM_JSON" >music-update-arm-v7a.json
-          fi
-          if [ ! -f *.json ]; then : >dummy.json; fi
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          branch: update
-          skip_checkout: true
-          file_pattern: latest_build.md *.json
-          commit_message: Bump version ${{ steps.next_ver_code.outputs.NEXT_VER_CODE }}
-
-  notify:
-    needs: run
-    uses: ./.github/workflows/notify.yml
-    if: github.ref == 'refs/heads/main'
-    secrets:
-      TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
-      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          file: ${{ steps.get_output_name.outputs.OUTPUT }}
+          asset_name: ${{ steps.get_output_name.outputs.OUTPUT }}
+          release_name: ${{ steps.get_output_name.outputs.OUTPUT }}
+          overwrite: true
