--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
           git clone "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY" .
           ./build-module.sh
       - id: get_output_name
-        run: echo ::set-output name=OUTPUT::$(cat build-module.sh | sed -n 's/.*OUTPUT="\(.*\)".*/\1/p')
+        run: echo ::set-output name=OUTPUT::$(find . -maxdepth 1 -name "revanced-magisk-*.zip" -printf '%P')
         shell: bash
       - name: Upload release
         uses: svenstaro/upload-release-action@2.3.0
