Use the proper action for checking out
Former-commit-id: f55521bb34bd1f21c8db7d544651b3ae9c33699e

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,9 @@ jobs:
         with:
           distribution: "zulu"
           java-version: "17"
+      - name: Checkout
+        uses: actions/checkout@v3
       - run: |
-          git clone "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY" .
           ./build-module.sh
       - id: get_output_name
         run: |
