--- a/build.conf
+++ b/build.conf
@@ -1,8 +1,8 @@
 # ex: for excluding patches: -e patchname -e anotherpatchname
 # if you add '--experimental' arg, you get latest version of apps ignoring the versions revanced-patches support
 # if you remove '-e microg-support' arg, you get non-root builds
-YT_PATCHER_ARGS="-e microg-support"
-MUSIC_PATCHER_ARGS="-e music-microg-support"
+YT_PATCHER_ARGS=""
+MUSIC_PATCHER_ARGS=""
 
 BUILD_YT=true
 BUILD_MUSIC_ARM64_V8A=true
@@ -11,10 +11,10 @@ BUILD_TWITTER=true
 BUILD_REDDIT=true
 
 BUILD_WARN_WETTER=false
-BUILD_TIKTOK=false
+BUILD_TIKTOK=true
 
-BUILD_MINDETACH_MODULE=true
+BUILD_MINDETACH_MODULE=false
 MOUNT_DELAY=1             # some low-end phones *cannot mount apks on boot* without a delay. increase to something like 20 if needed.
-ENABLE_MAGISK_UPDATE=true # set this to false if you do not want to receive updates from magisk app
+ENABLE_MAGISK_UPDATE=false # set this to false if you do not want to receive updates from magisk app
 
 UPDATE_PREBUILTS=true # dont touch this
