--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
           
       - name: Update release JSON
         run: |
-          curl https://api.github.com/repos/revanced-apks/revanced-apks/releases/latest > release.json
+          curl https://api.github.com/repos/${{ github.repository }}/releases/latest > release.json
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
