--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -37,7 +37,12 @@ jobs:
       
       - name: Get lateest_build.md
         id: latest_build
-        run: echo "::set-output name=latest_build_message::$(cat latest_build.md)"
+        run: |
+          OUTPUT_MSG = $(cat latest_build.md)
+          OUTPUT_MSG="${OUTPUT_MSG//'%'/'%25'}"
+          OUTPUT_MSG="${OUTPUT_MSG//$'\n'/'%0A'}"
+          OUTPUT_MSG="${OUTPUT_MSG//$'\r'/'%0D'}"
+          echo "::set-output name=latest_build_message::$OUTPUT_MSG"
           
       - name: Telegram Channel Update
         uses: appleboy/telegram-action@master
