--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -36,11 +36,10 @@ jobs:
           commit_message: Update release.json on ${{ steps.date.outputs.date }}
       
       - name: Get lateest_build.md
-        id: latest_build
-        run: |
-          OUTPUT_MSG=$(cat latest_build.md)
-          echo "$OUTPUT_MSG"
-          echo "::set-env name=RELEASE_MSG::$OUTPUT_MSG"
+        id: read_file
+        uses: andstor/file-reader-action@v1
+        with:
+          path: "latest_build.md"
           
       - name: Telegram Channel Update
         uses: appleboy/telegram-action@master
@@ -49,9 +48,7 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: markdown
           message: |
-            ```
-            ${{ env.RELEASE_MSG }}
-            ```
+            ${{ steps.read_file.outputs.contents }}
             
             [Download](https://revanced-apks.pages.dev/)
             
