--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -46,13 +46,13 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
+          disable_web_page_preview: true
           format: markdown
           message: |
             *Release*
           
-            _Date_: ${{ steps.read_file.outputs.contents }}
+            Date: ${{ steps.read_file.outputs.contents }}
             
-            [*Download Now*](https://revanced-apks.pages.dev/)
-            <br>
-            
+            [Download Now](https://revanced-apks.pages.dev/)
+             
         
