--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
           submodules: true
           
-      - name: Switch to update branch
+      - name: Switch to release branch
         run: git checkout -f release || git switch --discard-changes --orphan update
         
       - name: Update release JSON
@@ -34,6 +34,9 @@ jobs:
           skip_checkout: true
           file_pattern: release.json
           commit_message: Update release.json on ${{ steps.date.outputs.date }}
+          
+      - name: Switch to update branch
+        run: git checkout -f update || git switch --discard-changes --orphan update
       
       - name: Get latest release description
         id: read_file
