--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -7,15 +7,31 @@ on:
 jobs:
   merge-upstream:
     runs-on: ubuntu-latest
-    steps: 
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: upstream             # set the branch to merge to
-          fetch-depth: 0 
-      - name: Merge Upstream
-        uses: exions/merge-upstream@v1
-        with:
-          upstream: j-hc/revanced-magisk-module     # set the upstream repo
-          upstream-branch: main   # set the upstream branch to merge from
-          branch: main          # set the branch to merge to
+    steps:
+    - uses: actions/checkout@master
+    - name: fetch and push
+      env:
+        UPSTREAM: https://github.com/j-hc/revanced-magisk-module
+      run: |
+        git config --global user.name "github-actions"
+        git config --global user.email "github-actions@users.noreply.github.com"
+        
+        git remote add upstream "${UPSTREAM}"
+        
+        # Verify upstream is correct, you should see the URL for the upstream fetch and push 
+        git remote -v
+        
+        # Get all recent branches and commits from the upstream
+        git fetch upstream
+        
+        # Merge the branches and commits from the upstream
+        git merge upstream/main
+                
+        # helpful for debugging
+        git show-ref
+        
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
