--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -12,6 +12,7 @@ jobs:
     - name: Upstream Pull Request
       env:
         UPSTREAM: https://github.com/j-hc/revanced-magisk-module
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name "github-actions"
         git config --global user.email "github-actions@users.noreply.github.com"
@@ -26,38 +27,13 @@ jobs:
         
         git pull upstream main
         
-        #change branch
-        git checkout -b upstream
+        gh pr create --title "Merge Upstream" --body "Update from upstream repo" --base main --head upstream:main
         
-        # Merge the branches and commits from the upstream
-        git merge upstream/main --ff-only
-        
-        git add . --force
-        
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-
-    - name: Create Pull Request
-      id: cpr
-      uses: peter-evans/create-pull-request@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: Merge upstream ${{ steps.date.outputs.date }}
-        committer: GitHub <noreply@github.com>
-        author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-        branch: upstream
-        delete-branch: true
-        title: 'Merge Upstream'
-        body: |
-          Update upstream
-          - Updated with *today's* date
-    - name: Enable Pull Request Automerge
-      if: steps.cpr.outputs.pull-request-operation == 'created'
-      uses: peter-evans/enable-pull-request-automerge@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
-        merge-method: squash
+#     - name: Enable Pull Request Automerge
+#       uses: peter-evans/enable-pull-request-automerge@v2
+#       with:
+#         token: ${{ secrets.GITHUB_TOKEN }}
+#         pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+#         merge-method: squash
 
         
