--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   merge-upstream:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
     - uses: actions/checkout@master
     - name: Upstream Pull Request
