--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -12,16 +12,16 @@ jobs:
       pull-requests: write
     
     steps:
-    - uses: actions/checkout@master
-    - name: Upstream Pull Request
-      env:
-        UPSTREAM: https://github.com/j-hc/revanced-magisk-module
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git remote add upstream ${UPSTREAM}
-        git fetch upstream
-        gh pr create --title "Merge Upstream" --body "Upstream update" --base origin/main --head upstream/main
-        
+      - uses: actions/checkout@v3
+
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.PAT }}
+          head: j-hc/revanced-magisk-module
+          base: main
+            
 #     - name: Enable Pull Request Automerge
 #       uses: peter-evans/enable-pull-request-automerge@v2
 #       with:
