--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -19,7 +19,7 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           token: ${{ secrets.PAT }}
-          head: j-hc/revanced-magisk-module
+          push-to-fork: j-hc/revanced-magisk-module
           base: main
             
 #     - name: Enable Pull Request Automerge
