--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -1,7 +1,7 @@
-name: Scheduled Merge Remote Action
+name: Sync with upstream
 on: 
   schedule:
-    - cron: '0 22 * * *'
+    - cron: '30 22 * * *'
   workflow_dispatch:
 
 jobs:
