--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -16,7 +16,9 @@ jobs:
 #           GITHUB_TOKEN: ${{ secrets.PAT }}
           
       - name: Create PR on conflicts
-        run: gh pr create -f -H  j-hc/revanced-magisk-module:update -r revanced-apks
+        run: |
+          git fetch upstream
+          gh pr create -f -H  upstream/update -r revanced-apks
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
 
