--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -10,16 +10,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-#       - name: Sync Repo
-#         run: gh repo sync ${{ github.repository }} -b main
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.PAT }}
+      - name: Sync Repo
+        run: gh repo sync ${{ github.repository }} -b main
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           
       - name: Create PR on conflicts
+        if: failure()
         run: |
           git remote add upstream https://github.com/j-hc/revanced-magisk-module
           git fetch upstream
-          gh pr create --title "PR test" --body "PR Test" -B origin/update -H upstream/update -r revanced-apks
+          gh pr create --title "Upstream Merge" --body "Upstream merge conflicts occured" --base origin/main --head upstream/main -r revanced-apks
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
 
