--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -1,8 +1,10 @@
 name: Act on release
 
 on:
-  release:
-    types: [published]
+  workflow_run:
+    workflows: [Build Modules]
+    types:
+      - completed
   workflow_dispatch:
 
 jobs:
