--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,3 +107,7 @@ jobs:
           skip_checkout: true
           file_pattern: latest_build.md *.json
           commit_message: Bump version ${{ steps.next_ver_code.outputs.NEXT_VER_CODE }}
+
+  notify:
+    needs: run
+    uses: ./.github/workflows/notify.yml
