Make youtube and youtube build on latest version (#9)
This will ignore YouTube versions specified in revanced patches.

--- a/build.conf
+++ b/build.conf
@@ -1,8 +1,8 @@
 # ex: for excluding patches: -e patchname -e anotherpatchname
 # if you add '--experimental' arg, you get latest version of apps ignoring the versions revanced-patches support
 # if you remove '-e microg-support' arg, you get non-root builds
-YT_PATCHER_ARGS=""
-MUSIC_PATCHER_ARGS=""
+YT_PATCHER_ARGS="--experimental"
+MUSIC_PATCHER_ARGS="--experimental"
 
 BUILD_YT=true
 BUILD_MUSIC_ARM64_V8A=true
