--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -55,11 +55,11 @@ jobs:
 
             print("Date: "+release['body'], end="\n\n")
 
-            print("*Downloads*")
+            print("📦 *Downloads*")
 
             # Collect browser_download_url from assets in release
             for asset in release['assets'][::-1]:
-                print(f"[{asset['name']}]({asset['browser_download_url']})")
+                print(f"🔗 [{asset['name']}]({asset['browser_download_url']})")
           
       - name: Telegram Channel Update
         uses: appleboy/telegram-action@master
@@ -68,7 +68,7 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: markdown
           message: |
-            *RELEASE*
+            📑 *RELEASE*
             
             ${{ steps.pyscript.outputs.stdout }}
             
