--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,11 +50,7 @@ jobs:
           cd build
           yt_op=$(find . -maxdepth 1 -name "youtube-revanced-magisk-*.zip" -printf '%P')
           echo ::set-output name=YT_OUTPUT::$yt_op
-          if [ -z "$yt_op" ]; then
-            echo ::set-output name=RELEASE_NAME::"revanced"
-          else
-            echo ::set-output name=RELEASE_NAME::$yt_op
-          fi
+          echo ::set-output name=RELEASE_NAME::"$(date +'v%d-%m-%Y')"
           echo ::set-output name=MUSIC_OUTPUT_ARM64::$(find . -maxdepth 1 -name "music-revanced-magisk-*-arm64-v8a.zip" -printf '%P')
           echo ::set-output name=MUSIC_OUTPUT_ARM::$(find . -maxdepth 1 -name "music-revanced-magisk-*-arm-v7a.zip" -printf '%P')
 
