--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          format: markdownV2
+          format: markdown
           message: |
             📑 *RELEASE*
             
