--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -48,12 +48,15 @@ jobs:
         with:
           script: |
             import json
+            import re
 
             # Read release.json file
             with open('release.json', 'r') as f:
                 release = json.load(f)
 
-            print(release['name'], end="\n\n")
+            print(release['name'], end="\n")
+            
+            print(re.findall(r"CLI:[a-zA-Z-.\s0-9:]+\n", release['body'])[0] or "", end="\n\n")
             
             print("*Note:* \n - `mindtech.zip` is used to detach play store updates for YT and YT Music for rooted users.\n - Use `vanced microg` for non root YT and YT Music.", end="\n\n")
 
