--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -58,24 +58,28 @@ jobs:
             
             print(re.findall(r"CLI:[a-zA-Z-.\s0-9:]+\n", release['body'])[0] or "")
             
-            print("*Note:* \n - `mindtech.zip` is used to detach play store updates for YT and YT Music for rooted users.\n - Use `vanced microg` for non root YT and YT Music.", end="\n\n")
+            print("*≣ Note:* \n ➜ `mindtech.zip` is used to detach play store updates for YT and YT Music for rooted users.\n ➜ Use `vanced microg` for non root YT and YT Music.", end="\n\n")
 
-            print("📦 *Downloads*")
+            print("📦 *Downloads* \n")
 
             # Collect browser_download_url from assets in release
             nonroot_files = []
             root_files = []
+            
             for asset in release['assets'][::-1]:
                 file_name = asset['name']
                 file_url = asset['browser_download_url']
-                if 'magisk' in file_name:
+                if '.zip' in file_name:
                   root_files.append(f"🔗 [{file_name}]({file_url})")
                 else:
                   nonroot_files.append(f"🔗 [{file_name}]({file_url})")
-            print("_Non Root_ :")
+                  
+            print("Non-Root:")
             print("\n".join(nonroot_files))
+            
             print()
-            print("_Root_ :")
+            
+            print("Magisk (Root):")
             print("\n".join(root_files))
           
       - name: Telegram Channel Update
