Fix `mindetach` typo

--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -58,7 +58,7 @@ jobs:
             
             print(re.findall(r"CLI:[a-zA-Z-.\s0-9:]+\n", release['body'])[0] or "")
             
-            print("*≣ Note:* \n ➜ `mindtech.zip` is used to detach play store updates for YT and YT Music for rooted users.\n ➜ Use `vanced microg` for non root YT and YT Music.", end="\n\n")
+            print("*≣ Note:* \n ➜ `mindetach.zip` is used to detach play store updates for YT and YT Music for rooted users.\n ➜ Use `vanced microg` for non root YT and YT Music.", end="\n\n")
 
             print("📦 *Downloads* \n")
 
