--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -93,4 +93,6 @@ jobs:
             
             ${{ steps.pyscript.outputs.stdout }}
             
+            Credits to our upstream repository [-hc/revanced-magisk-module](https://github.com/j-hc/revanced-magisk-module)
+            
             @revanced_apks_web | revanced-apks.pages.dev
