Refactor `notify.yml`

--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -40,10 +40,13 @@ jobs:
           file_pattern: release.json
           commit_message: Update release.json on ${{ steps.date.outputs.date }}
           
-      - uses: actions/setup-python@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10' 
-      - uses: jannekem/run-python-script-action@v1
+          python-version: '3.10' # The python version to use.
+        
+      - name: Run release py script
+        uses: jannekem/run-python-script-action@v1
         id: pyscript
         with:
           script: |
